# jsonrpsee-repro

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
rpc_lib/: Cargo.toml
rpc_lib/src/: lib.rs
server/: Cargo.toml  example_data.json
server/src/: main.rs
